# sd_fastapi

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
app/: db.sqlite  main.py
app/api_v1/: __init__.py  crud.py  schemas.py  views.py
app/api_v1/components/: crud.py  schemas.py  views.py
app/core/: config.py
app/core/models/: __init__.py  attribute.py  component.py  db_manager.py  incident.py  relations.py  status.py
app/datetime/: __init__.py
app/tests/unit/: test_unit1.py
