[metadata]
name = fastapi_pet
summary = FAST API PET PROJECT
description_file =
    README.md
author = Ilia Bakhterev
python_requires = >=3.11
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Framework :: FastAPI
    Operating System :: POSIX :: Linux


[pbr]
warnerrors = True

[files]
packages =
  fastapi_pet
package_dir =
  fastapi_pet = 
      app/
